<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:nestedScrollingEnabled="true"
    android:overScrollMode="always"
    android:persistentDrawingCache="scrolling"
    android:scrollIndicators="right"
    android:scrollbarDefaultDelayBeforeFade="350"
    android:scrollbarFadeDuration="500"
    android:scrollbarSize="18dp"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".Services_TabOne">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFF3E0"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_services1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="-50dp"
                    android:padding="20dp"
                    app:srcCompat="@mipmap/img_service1" />

                <TextView
                    android:id="@+id/txt_service1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="-82dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="#FFF3E0"
                    android:fontFamily="@font/andika"
                    android:text="@string/strService1"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#242424"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_service11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="-10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="30dp"
                    android:background="#FFF3E0"
                    android:fontFamily="@font/archivo_black"
                    android:text="@string/strService11"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#1B1717"
                    android:textSize="33sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FBE9E7"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_services2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-30dp"
                    android:layout_marginBottom="-50dp"
                    android:padding="20dp"
                    app:srcCompat="@mipmap/img_service2" />

                <TextView
                    android:id="@+id/txt_service2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="-82dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="#FFFBE9E7"
                    android:fontFamily="@font/andika"
                    android:text="@string/strService2"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#242424"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_service22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="-10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="30dp"
                    android:background="#FFFBE9E7"
                    android:fontFamily="@font/archivo_black"
                    android:text="@string/strService22"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#1B1717"
                    android:textSize="33sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#EDE7F6"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_services3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-30dp"
                    android:layout_marginBottom="-50dp"
                    android:padding="20dp"
                    app:srcCompat="@mipmap/img_service3" />

                <TextView
                    android:id="@+id/txt_service3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="-82dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="#EDE7F6"
                    android:fontFamily="@font/andika"
                    android:text="@string/strService3"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#242424"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_service33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="-10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="30dp"
                    android:background="#EDE7F6"
                    android:fontFamily="@font/archivo_black"
                    android:text="@string/strService33"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#1B1717"
                    android:textSize="33sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E3F2FD"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_services4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-30dp"
                    android:layout_marginBottom="-50dp"
                    android:padding="20dp"
                    app:srcCompat="@mipmap/img_service4" />

                <TextView
                    android:id="@+id/txt_service4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="-82dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="#E3F2FD"
                    android:fontFamily="@font/andika"
                    android:text="@string/strService4"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#242424"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_service44"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="-10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="30dp"
                    android:background="#E3F2FD"
                    android:fontFamily="@font/archivo_black"
                    android:text="@string/strService44"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#1B1717"
                    android:textSize="33sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>